--- a/index.org
+++ b/index.org
@@ -122,9 +122,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-12-15 Tue>: iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] version 1.1 available
 - <2009-11-13 Fri>: Release 6.33
 
-* Current Version (6.35)
+* Current Version (6.35b)
 
-The current version is 6.35.  To see what has changed in recent
+The current version is 6.35b.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -136,7 +136,7 @@ recent version, but may lag a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.35.zip][zip file]] or [[file:org-6.35.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.35b.zip][zip file]] or [[file:org-6.35b.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
