Two more tweaks to LaTeX setup.
Will this ever end???

--- a/Changes.org
+++ b/Changes.org
@@ -88,6 +88,7 @@ applies to the following packages:
 
 - inputenc
 - fontenc
+- fixltx2e
 - graphicx
 - longtable
 - float
@@ -100,6 +101,7 @@ applies to the following packages:
 - latexsym
 - amssymb
 - hyperref
+- microtype
 
 If one of these packages creates a conflict with another package
 you are using, you can remove it from
