--- a/Changes_old.org
+++ b/Changes_old.org
@@ -4155,7 +4155,7 @@ but not any simpler -- Albert Einstein
          at.  Also, it will allow you to more easily move text
          and files back and forth between Org and Muse.  For a
          list of supported structure elements, see the commentary
-         in the file [[http://repo.or.cz/w/org-mode.git?a=blob_plain;f=contrib/lisp/org-mtags.el;hb=HEAD][commentary in the file org-mtags.el]].
+         in the file [[http://orgmode.org/w/org-mode.git?a%3Dblob_plain%3Bf%3Dcontrib/lisp/org-mtags.el%3Bhb%3DHEAD][commentary in the file org-mtags.el]].
 
 	 If you load this module and use the "<i" etc completion
          described above, the Muse form will automatically be
