--- a/index.org
+++ b/index.org
@@ -152,7 +152,7 @@ formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.h
 
 You can check out the latest Org development version (along with every
 release we ever had) by using git.  The git repository is [[http://orgmode.org/w/org-mode.git][browsable
-online]].  At any time you can get a [[http://repo.or.cz/w/org-mode.git/snapshot][snapshot]] of the files in it.  To
+online]].  At any time you can get a [[http://orgmode.org/w/org-mode.git/snapshot][snapshot]] of the files in it.  To
 get a local clone of the repository use something like the following
 (from the command line....):
 
@@ -162,8 +162,7 @@ Some more information about this can be found in the [[http://orgmode.org/worg/o
 keep current with Org mode development?]].  For people who cannot use git, we
 provide [[file:org-latest.zip][zip]] or [[file:org-latest.tar.gz][tar.gz]] snapshot release files updated each day and
 corresponding to the latest git version.  Alternatively, you can also
-download a [[http://repo.or.cz/w/org-mode.git/snapshot][tar.gz snapshot]] from the repo.or.cz server (a mirror of the git
-repo on orgmode.org).
+download a [[http://orgmode.org/w/org-mode.git/snapshot][tar.gz snapshot]] from orgmode.org server.
 
 ** Alternative distributions
 
