--- a/index.org
+++ b/index.org
@@ -83,11 +83,8 @@
           </tr>
           <tr>
             <td>
-              <a href="http://flattr.com/thing/129410/Org-mode-for-Emacs" target="_blank">
-              <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
-            </td>
-            <td>
               <span style="font-size: 90%;margin-top:10px;">... or by "flattring" us!</span>
+              <a class="FlattrButton" style="display:none;" href="http://orgmode.org"></a>
             </td>
           </tr>
         </table>
